<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorPrimary"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:clickable="true"
    android:focusable="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/fontWhite"
            android:textSize="@dimen/textSmall"
            android:text="@string/descriptionhint_text_signup"/>
        <EditText
            android:id="@+id/edittext_firstname_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:textColor="@color/fontWhite"
            android:textColorHint="@color/fontLightGray"
            android:hint="@string/hint_edittext_firstname_signup"
            android:inputType="textCapSentences"
            tools:ignore="Autofill,TextFields" />
        <EditText
            android:id="@+id/edittext_lastname_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textColor="@color/fontWhite"
            android:textColorHint="@color/fontLightGray"
            android:hint="@string/hint_edittext_lastname_signup"
            android:inputType="textCapSentences"
            tools:ignore="Autofill,TextFields" />
        <Button
            android:id="@+id/btn_next_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/nunito_bold"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/fontWhite"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="@dimen/textSmall"
            android:drawableStart="@drawable/ic_next"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hint_btnnext_signup"/>
        <Button
            android:id="@+id/btn_exitapp_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/fontWhite"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="@dimen/textSmall"
            android:drawableStart="@drawable/ic_close"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hint_btnexitapp_signup"/>
    </LinearLayout>
</FrameLayout>