<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical"
    android:animateLayoutChanges="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        android:animateLayoutChanges="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:ignore="UselessParent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/fontWhite"
                    android:textSize="@dimen/text"
                    android:textStyle="bold"
                    android:text="@string/topbar_text_menu" />
                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_view_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:scaleType="fitXY"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_hide_menu"/>
            </FrameLayout>
            <TableLayout
                android:id="@+id/tablelayout_menu_item_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start">
                <TableRow>
                    <Button
                        android:id="@+id/btn_menuitem_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/item_name_0"
                        android:textAllCaps="false"
                        android:textColor="@color/fontWhite"
                        android:textSize="@dimen/textButton" />
                    <Button
                        android:id="@+id/btn_menuitem_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:fontFamily="@font/nunito_semibold"
                        android:textColor="@color/fontWhite"
                        android:text="@string/item_name_1"/>
                    <Button
                        android:id="@+id/btn_menuitem_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:fontFamily="@font/nunito_semibold"
                        android:textColor="@color/fontWhite"
                        android:text="@string/item_name_2"/>
                </TableRow>
                <TableRow>
                    <Button
                        android:id="@+id/btn_menuitem_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:fontFamily="@font/nunito_semibold"
                        android:textColor="@color/fontWhite"
                        android:text="@string/item_name_3"/>
                    <Button
                        android:id="@+id/btn_menuitem_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:fontFamily="@font/nunito_semibold"
                        android:textColor="@color/fontWhite"
                        android:text="@string/item_name_4"/>
                    <Button
                        android:id="@+id/btn_menuitem_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:fontFamily="@font/nunito_semibold"
                        android:textColor="@color/fontWhite"
                        android:text="@string/item_name_5"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">
        <FrameLayout
            android:id="@+id/frame_null_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:animateLayoutChanges="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/fontDarkGray"
                android:textSize="@dimen/textSmall"
                android:text="@string/orderlist_text_null_placeholder"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview_title_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/fontBlack"
                android:textStyle="bold"
                android:textSize="@dimen/text"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/orderlist_text_order"
                android:animateLayoutChanges="true"
                android:visibility="gone" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="?attr/actionBarSize"
                android:visibility="gone" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start|center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semibold"
                    android:layout_gravity="start"
                    android:textColor="@color/fontWhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/text"
                    android:text="@string/bottombar_text_price"/>
                <TextView
                    android:id="@+id/textview_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semibold"
                    android:layout_gravity="end"
                    android:textColor="@color/fontWhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/text"
                    android:layout_marginStart="6dp"
                    android:text="@string/bottombar_text_price_nullvalue"
                    android:animateLayoutChanges="true"/>
            </LinearLayout>
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:scaleType="fitXY"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_buy"/>
        </FrameLayout>
    </FrameLayout>
</LinearLayout>