<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp">
        <TextView
            android:id="@+id/description_order_item_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:fontFamily="@font/nunito_semibold"
            android:textSize="@dimen/text"
            android:textColor="@color/fontBlack"/>
        <TextView
            android:id="@+id/description_order_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/nunito_bold"
            android:textSize="@dimen/text"
            android:textColor="@color/fontDarkGray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="start"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/fontBlack"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            android:text="@string/dialog_body_order_3" />
        <NumberPicker
            android:id="@+id/np_order_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="start"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/fontBlack"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            android:text="@string/dialog_body_order_4" />
        <RadioGroup
            android:id="@+id/rb_group_order_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_marginTop="8dp">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_type_0_order_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="@color/fontBlack"
                android:checked="true"
                android:textSize="@dimen/text"
                android:text="@string/item_type_0_description"/>
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_type_1_order_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="@color/fontBlack"
                android:textSize="@dimen/text"
                android:text="@string/item_type_1_description"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>