<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:text="@string/dialog_body_order_item_detail_0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:layout_marginEnd="12dp"
                android:text="@string/dialog_body_order_item_detail_separator"/>
            <TextView
                android:id="@+id/txt_order_item_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:text="@string/dialog_body_order_item_detail_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:layout_marginEnd="12dp"
                android:text="@string/dialog_body_order_item_detail_separator"/>
            <TextView
                android:id="@+id/txt_order_item_detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:text="@string/dialog_body_order_item_detail_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:layout_marginEnd="12dp"
                android:text="@string/dialog_body_order_item_detail_separator"/>
            <TextView
                android:id="@+id/txt_order_item_detail_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:text="@string/dialog_body_order_item_detail_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:layout_marginEnd="12dp"
                android:text="@string/dialog_body_order_item_detail_separator"/>
            <TextView
                android:id="@+id/txt_order_item_detail_pricepercup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:layout_marginEnd="12dp"
                android:text="@string/dialog_body_order_item_detail_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"
                android:layout_marginEnd="12dp"
                android:text="@string/dialog_body_order_item_detail_separator"/>
            <TextView
                android:id="@+id/txt_order_item_detail_totalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="@dimen/text"
                android:textColor="@color/fontBlack"/>
        </TableRow>
    </TableLayout>
</ScrollView>